<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Light_Grey"
    android:textAlignment="center"
    tools:context=".Apply">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="438dp"
        android:layout_height="85dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:background="@color/white"
        android:backgroundTint="@color/Light_Grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_marginBaseline="@dimen/margin_10">

        <TextView
            android:id="@+id/nameofApp"
            android:layout_width="226dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_weight="1"
            android:paddingLeft="@dimen/margin_5"
            android:text="@string/ApplyNow"
            android:textAlignment="textStart"
            android:textSize="48sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/apply" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="449dp"
        android:layout_height="101dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/material_dynamic_neutral_variant70" />

        <ImageView
            android:id="@+id/icnHome"
            android:layout_width="86dp"
            android:layout_height="71dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/trackIcon"
            android:layout_width="80dp"
            android:layout_height="83dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/track" />

        <ImageView
            android:id="@+id/applyIcon"
            android:layout_width="84dp"
            android:layout_height="80dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/apply" />

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="84dp"
            android:layout_height="70dp"
            android:layout_marginStart="350dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/user" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="438dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextText4"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:ems="10"
                    android:hint="@string/FullName"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/My_Red" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:ems="10"
                    android:hint="@string/DOB"
                    android:inputType="date"
                    android:textColorHint="@color/My_Red" />

                <EditText
                    android:id="@+id/editTextNumberSigned"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:ems="10"
                    android:hint="@string/NIC"
                    android:inputType="numberSigned"
                    android:textColorHint="@color/My_Red" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:ems="10"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/My_Red" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:ems="10"
                    android:hint="@string/PhoneNumber"
                    android:inputType="phone"
                    android:textColorHint="@color/My_Red" />

                <EditText
                    android:id="@+id/editTextTextPostalAddress"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:ems="10"
                    android:hint="@string/PostalAddress"
                    android:inputType="textPostalAddress"
                    android:textColorHint="@color/My_Red" />

                <EditText
                    android:id="@+id/editTextNumberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:ems="10"
                    android:hint="@string/PostalCode"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/My_Red" />

                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:ems="10"
                    android:hint="@string/LoanType"
                    android:inputType="text"
                    android:textColorHint="@color/My_Red" />

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/LoanReason"
                    android:inputType="textMultiLine"
                    android:textColorHint="@color/My_Red" />

                <EditText
                    android:id="@+id/editTextNumberDecimal2"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:ems="10"
                    android:hint="@string/LoanAmount"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/My_Red" />

                <EditText
                    android:id="@+id/editTextTime"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:ems="10"
                    android:hint="@string/Tenure"
                    android:inputType="time"
                    android:textColorHint="@color/My_Red" />

                <Button
                    android:id="@+id/upColl"
                    android:layout_width="422dp"
                    android:layout_height="66dp"
                    android:layout_marginBottom="48dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/Submit"
                    android:textColor="@color/Dark_Grey"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
